--- a/src/app/user/view/view.component.html
+++ b/src/app/user/view/view.component.html
@@ -24,7 +24,7 @@
             </div>
             <div>
                 <h6 class="inline-block">Date de naissance</h6>
-                <p>ASK</p>
+                <p>{{singleItem.datenais}}</p>
             </div>
         </div>
         <div class="col-md-3">
@@ -45,7 +45,7 @@
             </div>
             <div>
                 <h6>Le nombre de personnes handicapées ou atteintes d'une maladie chronique</h6>
-                <p>ASK</p>
+                <p>{{singleItem.nombre_de_personnes_atteintes}}</p>
             </div>
             <div>
                 <h6>Somme</h6>
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="col-md-3">
-            <h6 class="text-primary">ETAT CIVIL</h6>
+            <h6 class="text-primary">ETATS</h6>
             <hr>
             <div>
                 <h6>ÉTAT CIVIL</h6>
