--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,11 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" *ngIf="isUserLoggedIn" id="navbarNav">
-        <ul class="navbar-nav" *ngIf="isUserLoggedIn">
-            <li class="nav-item">
+    <div class="collapse navbar-collapse"  id="navbarNav">
+        <ul class="navbar-nav">
+            <li *ngIf="isUserLogin" class="nav-item">
                 <button (click)="logout()" class="btn" style="color:white">Logout</button>
             </li>
-          
         </ul>
     </div>
 </nav>
