--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,24 +6,44 @@
                 <div class="form-group">
                     <label for="fullname">Nom et prénom</label>
                     <input type="text" formControlName="fullName" class="form-control" id="fullname" placeholder="entrer le nom complet">
+                    <div *ngIf="signupForm.controls['fullName'].invalid && (signupForm.controls['fullName'].dirty || signupForm.controls['fullName'].touched)" class="alert alert-danger">
+                          <div *ngIf="signupForm.controls['fullName'].errors.required">
+                            Le nom est requis.
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="contact">Contact</label>
                     <input type="text" formControlName="contact" class="form-control" id="contact" placeholder="Enter votre contact">
+                    <div *ngIf="signupForm.controls['contact'].invalid && (signupForm.controls['contact'].dirty || signupForm.controls['contact'].touched)" class="alert alert-danger">
+                        <div *ngIf="signupForm.controls['contact'].errors.required">
+                            Un contact est requis.
+                      </div>
+                  </div>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Adresse mail</label>
                     <input type="email" formControlName="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter votre adresse mail">
+                    <div *ngIf="signupForm.controls['email'].invalid && (signupForm.controls['email'].dirty || signupForm.controls['email'].touched)" class="alert alert-danger">
+                        <div *ngIf="signupForm.controls['email'].errors.required">
+                        L'e-mail est requis
+                      </div>
+                  </div>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Mot de passe</label>
                     <input type="password" formControlName="password" class="form-control" id="exampleInputPassword1" placeholder="Enter votre mot de passe">
+                    <div *ngIf="signupForm.controls['password'].invalid && (signupForm.controls['password'].dirty || signupForm.controls['password'].touched)" class="alert alert-danger">
+                        <div *ngIf="signupForm.controls['password'].errors.required">
+                            Mot de passe requis
+                      </div>
+                  </div>
                 </div>
                 <div>         
 j'ai déjà un compte
                     <a routerLink="/authentication/login">Connexion</a>
                 </div>
-                <button type="submit" class="btn btn-success">
+                <button type="submit" [disabled]="!signupForm.valid" class="btn btn-success">
                     s'inscrire</button>
             </form>
         </div>
